maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:20: error: not found: value somANg
  if (somANg == 0){
      ^